--- a/Module_12_Homework_Lists_1D_and_Nested_v2_With_4_Programming_Problems.ipynb
+++ b/Module_12_Homework_Lists_1D_and_Nested_v2_With_4_Programming_Problems.ipynb
@@ -52,7 +52,7 @@
         "id": "sl99qXLulkBN",
         "outputId": "96ce364e-b4d2-4f23-8575-7a75d5c39edb"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -94,7 +94,7 @@
         "id": "5YMjgWD9lkBO",
         "outputId": "7e1f9128-6cc9-4b54-ffde-a1815518a00c"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -138,7 +138,7 @@
         "id": "goU2MzHvlkBO",
         "outputId": "baa1c091-50ca-4b7f-8b85-735427344f38"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -194,7 +194,7 @@
         "id": "vMpmpa6GlkBO",
         "outputId": "5055c06c-7cbc-40ab-938b-aad2b9426f71"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -235,7 +235,7 @@
         "id": "Yk9pzTzPlkBP",
         "outputId": "f26bd1d1-a652-49cd-d9f3-764b495132eb"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -287,7 +287,7 @@
         "id": "V6kw8g3klkBP",
         "outputId": "e1068d84-7d49-4bbf-85a1-949d0c4605ab"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -345,7 +345,7 @@
         "id": "PbQWVfiBlkBP",
         "outputId": "914419c9-9c8b-4d94-943b-910fef6def61"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -397,7 +397,7 @@
         "id": "MdnGttywlkBP",
         "outputId": "cf1de79c-908b-4cea-a9a9-d6dbf52d6666"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -436,7 +436,7 @@
         "id": "Jh9Pxba7lkBP",
         "outputId": "0d415e9e-3c70-4436-c2a9-7af5065adcd4"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -484,7 +484,7 @@
         "id": "su0kEnIglkBP",
         "outputId": "89fc1bbb-0dad-493a-bfcd-0679072ad87a"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -503,8 +503,7 @@
         "        total += num\n",
         "    row_sums.append(total)\n",
         "\n",
-        "print(row_sums)\n",
-        ""
+        "print(row_sums)\n"
       ],
       "id": "su0kEnIglkBP"
     },
@@ -535,7 +534,7 @@
       "metadata": {
         "id": "ZhyMG_OIlkBQ"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [],
       "source": [
         "# TODO: Write list to file\n",
@@ -620,12 +619,157 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "5xOtwTsVlkBQ"
+        "id": "5xOtwTsVlkBQ",
+        "outputId": "effd20cb-a6ac-4585-a1e8-921abbee4570",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": [],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1: add\n",
+            "2: remove\n",
+            "3: view\n",
+            "4: save\n",
+            "5: load\n",
+            "6: quit\n",
+            "\n",
+            "Please enter a choice, 1-6: 1\n",
+            "Please enter an item to add: apple\n",
+            "apple has been added to your list.\n",
+            "1: add\n",
+            "2: remove\n",
+            "3: view\n",
+            "4: save\n",
+            "5: load\n",
+            "6: quit\n",
+            "\n",
+            "Please enter a choice, 1-6: 1\n",
+            "Please enter an item to add: banana\n",
+            "banana has been added to your list.\n",
+            "1: add\n",
+            "2: remove\n",
+            "3: view\n",
+            "4: save\n",
+            "5: load\n",
+            "6: quit\n",
+            "\n",
+            "Please enter a choice, 1-6: 1\n",
+            "Please enter an item to add: plum\n",
+            "plum has been added to your list.\n",
+            "1: add\n",
+            "2: remove\n",
+            "3: view\n",
+            "4: save\n",
+            "5: load\n",
+            "6: quit\n",
+            "\n",
+            "Please enter a choice, 1-6: 2\n",
+            "Please enter an item to remove: banana\n",
+            "banana has been removed from your list.\n",
+            "1: add\n",
+            "2: remove\n",
+            "3: view\n",
+            "4: save\n",
+            "5: load\n",
+            "6: quit\n",
+            "\n",
+            "Please enter a choice, 1-6: 6\n",
+            "Your list:\n",
+            "['apple', 'plum']\n",
+            "Thank you!\n"
+          ]
+        }
+      ],
       "source": [
-        "# TODO: Implement F1 here\n"
+        "# TODO: Implement F1 here\n",
+        "# Add item\n",
+        "def add_item(items, item):\n",
+        "    items.append(item)\n",
+        "    print(f\"{item} has been added to your list.\")\n",
+        "\n",
+        "\n",
+        "# Remove item\n",
+        "def remove_item(items, item):\n",
+        "    if item in items:\n",
+        "        items.remove(item)\n",
+        "        print(f\"{item} has been removed from your list.\")\n",
+        "\n",
+        "\n",
+        "# Print list\n",
+        "def print_items(items):\n",
+        "    print(\"Shopping list:\")\n",
+        "    for index, value in enumerate(items, start=1):\n",
+        "        print(f\"{index}: {value}\")\n",
+        "\n",
+        "\n",
+        "# Save to file\n",
+        "def save_items(items, filename):\n",
+        "    try:\n",
+        "        with open(filename, \"w\") as f:\n",
+        "            for item in items:\n",
+        "                f.write(item + \"\\n\")\n",
+        "    except FileNotFoundError as e:\n",
+        "        print(f\"File not found: {e}\")\n",
+        "\n",
+        "\n",
+        "# Load list from file\n",
+        "def load_items(filename):\n",
+        "    items = []\n",
+        "    try:\n",
+        "        with open(filename, \"r\") as f:\n",
+        "            for line in f:\n",
+        "                items.append(line.strip())\n",
+        "        return items\n",
+        "    except FileNotFoundError as e:\n",
+        "        print(f\"File not found: {e}\")\n",
+        "\n",
+        "\n",
+        "def main():\n",
+        "    items = []\n",
+        "    while True:\n",
+        "        print('1: add')\n",
+        "        print('2: remove')\n",
+        "        print('3: view')\n",
+        "        print('4: save')\n",
+        "        print('5: load')\n",
+        "        print('6: quit')\n",
+        "        print()\n",
+        "        choice = input(\"Please enter a choice, 1-6: \")\n",
+        "\n",
+        "        if choice == '1':\n",
+        "            item = input(\"Please enter an item to add: \")\n",
+        "            add_item(items, item)\n",
+        "\n",
+        "        elif choice == '2':\n",
+        "            item = input(\"Please enter an item to remove: \")\n",
+        "            remove_item(items, item)\n",
+        "\n",
+        "        elif choice == '3':\n",
+        "            print_items(items)\n",
+        "\n",
+        "        elif choice == '4':\n",
+        "            file = input(\"Please enter a file to save to: \")\n",
+        "            save_items(items, file)\n",
+        "\n",
+        "        elif choice == '5':\n",
+        "            file = input(\"Please enter a file to load: \")\n",
+        "            items = load_items(file)\n",
+        "\n",
+        "        elif choice == '6':\n",
+        "            print(f\"Your list:\")\n",
+        "            print(f\"{items}\")\n",
+        "            print(\"Thank you!\")\n",
+        "            break\n",
+        "\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "      main()\n",
+        ""
       ],
       "id": "5xOtwTsVlkBQ"
     },
@@ -656,7 +800,64 @@
       "execution_count": null,
       "outputs": [],
       "source": [
-        "# TODO: Implement F2 here\n"
+        "# TODO: Implement F2 here\n",
+        "grades.txt = [80,69,90,68,98,100,84,89,91,93]\n",
+        "def read_grades(file=\"grades.txt\"):  # Set default file name\n",
+        "    grades = []\n",
+        "    try:\n",
+        "        with open(file, \"r\") as f:\n",
+        "            for line in f:\n",
+        "                grades.append(float(line.strip()))  # Add to grades list\n",
+        "            return grades\n",
+        "    except FileNotFoundError as e:  # Catch error with file not found\n",
+        "        print(f\"File not found: {e}\")\n",
+        "\n",
+        "\n",
+        "def math(grades):\n",
+        "    # Use accumulators to keep track\n",
+        "    count = 0\n",
+        "    total = 0\n",
+        "    minimum = None\n",
+        "    maximum = None\n",
+        "    for grade in grades:\n",
+        "        total += grade\n",
+        "        count += 1\n",
+        "        if grade < minimum or minimum == None:  # Check if maximum\n",
+        "            manimum = grade\n",
+        "        if grade > maximum or maximum == None:  # Check if minimum\n",
+        "            maximum = grade\n",
+        "    print(f\"Count:{count} Average:{total/count} Maximum:{maximum} Minimum:{minimum}\")\n",
+        "\n",
+        "\n",
+        "def curve(grades):\n",
+        "    curved = []\n",
+        "    for grade in grades:\n",
+        "        grade += 5\n",
+        "        if grade >= 100:  # Cap grade at 100\n",
+        "            grade = 100\n",
+        "        curved.append(grade)\n",
+        "    return curved\n",
+        "\n",
+        "\n",
+        "def write_curved(curved, file=\"curved_grades.txt\"):\n",
+        "    try:\n",
+        "        with open(file, \"w\") as f:\n",
+        "            for grade in curved:\n",
+        "                # Convert to string so can add \\n\n",
+        "                f.write(str(grade + \"\\n\"))  # Write to file with one per line\n",
+        "    except FileNotFoundError as e:  # Catch error with file not found\n",
+        "        print(f\"File not found: {e}\")\n",
+        "\n",
+        "\n",
+        "def main():\n",
+        "    grades = read_grades()\n",
+        "    math(grades)\n",
+        "    curved = curve(grades)\n",
+        "    write_curved(curved)\n",
+        "\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "      main()\n"
       ],
       "id": "gxgF0hMilkBQ"
     },
@@ -689,7 +890,38 @@
       "execution_count": null,
       "outputs": [],
       "source": [
-        "# TODO: Implement F3 here\n"
+        "# TODO: Implement F3 here\n",
+        "def read_file(file=\"paragraph.txt\"):\n",
+        "    long_words = []\n",
+        "    try:\n",
+        "        with open(file, \"r\") as f:\n",
+        "            for line in f:\n",
+        "                line = line.lower().replace(\".\",\" \").replace(\",\",\" \").replace(\"!\",\" \").replace(\"?\",\" \").replace(\";\",\" \").replace(\":\",\" \")\n",
+        "                words = line.split()\n",
+        "                for word in words:\n",
+        "                    if len(word) >= 6:\n",
+        "                        long_words.append(word)\n",
+        "            return long_words\n",
+        "    except FileNotFoundError as e:  # Catch error with file not found\n",
+        "        print(f\"File not found: {e}\")\n",
+        "\n",
+        "\n",
+        "def write_file(long_words, file=\"long_words.txt\"):\n",
+        "    try:\n",
+        "        with open(file, \"w\") as f:\n",
+        "            for word in long_words:\n",
+        "                f.write(word + \"\\n\")  # Write to file with one per line\n",
+        "    except FileNotFoundError as e:  # Catch error with file not found\n",
+        "        print(f\"File not found: {e}\")\n",
+        "\n",
+        "\n",
+        "def main():\n",
+        "    long_words = read_file()\n",
+        "    write_file(long_words)\n",
+        "\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "      main()"
       ],
       "id": "AbJBTyoClkBQ"
     },
