--- a/Module_12_Homework_Lists_1D_and_Nested_v2_With_4_Programming_Problems.ipynb
+++ b/Module_12_Homework_Lists_1D_and_Nested_v2_With_4_Programming_Problems.ipynb
@@ -620,10 +620,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "5xOtwTsVlkBQ",
-        "outputId": "effd20cb-a6ac-4585-a1e8-921abbee4570",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "effd20cb-a6ac-4585-a1e8-921abbee4570"
       },
       "execution_count": 2,
       "outputs": [
@@ -795,13 +795,29 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "gxgF0hMilkBQ"
+        "id": "gxgF0hMilkBQ",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 211
+        },
+        "outputId": "7d95b391-3edf-40fa-856d-17b60bf601e6"
       },
-      "execution_count": null,
-      "outputs": [],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'grades' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-609912023.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# TODO: Implement F2 here\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mgrades\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtxt\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m80\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m69\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m90\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m68\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m98\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m84\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m89\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m91\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m93\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mread_grades\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"grades.txt\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m  \u001b[0;31m# Set default file name\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mgrades\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'grades' is not defined"
+          ]
+        }
+      ],
       "source": [
         "# TODO: Implement F2 here\n",
-        "grades.txt = [80,69,90,68,98,100,84,89,91,93]\n",
         "def read_grades(file=\"grades.txt\"):  # Set default file name\n",
         "    grades = []\n",
         "    try:\n",
@@ -885,10 +901,36 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "AbJBTyoClkBQ"
+        "id": "AbJBTyoClkBQ",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 339
+        },
+        "outputId": "16a733ac-a017-49fd-cd4f-b4884eeb8218"
       },
-      "execution_count": null,
-      "outputs": [],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "File not found: [Errno 2] No such file or directory: 'paragraph.txt'\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "'NoneType' object is not iterable",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-2082146114.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     33\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     34\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0m__name__\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m\"__main__\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 35\u001b[0;31m       \u001b[0mmain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m/tmp/ipython-input-2082146114.py\u001b[0m in \u001b[0;36mmain\u001b[0;34m()\u001b[0m\n\u001b[1;32m     29\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mmain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     30\u001b[0m     \u001b[0mlong_words\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mread_file\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 31\u001b[0;31m     \u001b[0mwrite_file\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlong_words\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     32\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     33\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/tmp/ipython-input-2082146114.py\u001b[0m in \u001b[0;36mwrite_file\u001b[0;34m(long_words, file)\u001b[0m\n\u001b[1;32m     21\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m         \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"w\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 23\u001b[0;31m             \u001b[0;32mfor\u001b[0m \u001b[0mword\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mlong_words\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     24\u001b[0m                 \u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mword\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\"\\n\"\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# Write to file with one per line\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m     \u001b[0;32mexcept\u001b[0m \u001b[0mFileNotFoundError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m  \u001b[0;31m# Catch error with file not found\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mTypeError\u001b[0m: 'NoneType' object is not iterable"
+          ]
+        }
+      ],
       "source": [
         "# TODO: Implement F3 here\n",
         "def read_file(file=\"paragraph.txt\"):\n",
@@ -896,9 +938,12 @@
         "    try:\n",
         "        with open(file, \"r\") as f:\n",
         "            for line in f:\n",
+        "                # Convert line to lower and replace punctuation\n",
         "                line = line.lower().replace(\".\",\" \").replace(\",\",\" \").replace(\"!\",\" \").replace(\"?\",\" \").replace(\";\",\" \").replace(\":\",\" \")\n",
+        "                # Split line by spaces\n",
         "                words = line.split()\n",
         "                for word in words:\n",
+        "                    # Check if each word is 6 or more letters\n",
         "                    if len(word) >= 6:\n",
         "                        long_words.append(word)\n",
         "            return long_words\n",
@@ -948,12 +993,101 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "rU1mtwttlkBQ"
+        "id": "rU1mtwttlkBQ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "46f2eec3-2033-4cfb-b1cb-c6cd27aa9171"
       },
-      "execution_count": null,
-      "outputs": [],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Sarah has been assigned to row:1 col:1.\n",
+            "Rachel has been assigned to row:2 col:2.\n",
+            "Rivka has been assigned to row:2 col:1.\n",
+            "Leah has been assigned to row:2 col:3.\n",
+            "Chaya has been assigned to row:2 col:4.\n",
+            "Tova has been assigned to row:1 col:2.\n",
+            "\n",
+            "EMPTY | EMPTY | EMPTY | EMPTY | EMPTY\n",
+            "EMPTY | Sarah | Tova | EMPTY | EMPTY\n",
+            "EMPTY | Rivka | Rachel | Leah | Chaya\n",
+            "EMPTY | EMPTY | EMPTY | EMPTY | EMPTY\n",
+            "\n",
+            "There are 14 empty seats remaining\n"
+          ]
+        }
+      ],
       "source": [
-        "# TODO: Implement F4 here\n"
+        "# TODO: Implement F4 here\n",
+        "# Build a 4×5 chart filled with the string \"EMPTY\"\n",
+        "row = 4\n",
+        "col = 5\n",
+        "chart = []\n",
+        "# Create nested list to contain seats\n",
+        "for r in range(row):\n",
+        "    this_row = []\n",
+        "    for c in range(col):\n",
+        "        this_row.append(\"EMPTY\")\n",
+        "    chart.append(this_row)\n",
+        "\n",
+        "\n",
+        "def assign_seat(chart, row, col, name):\n",
+        "    # Check that the seat is empty\n",
+        "    if chart[row][col] == \"EMPTY\":\n",
+        "        chart[row][col] = name\n",
+        "        print(f\"{name} has been assigned to row:{row} col:{col}.\")\n",
+        "    else:\n",
+        "        print(f\"This seat has already been taken. Please pick another seat.\")\n",
+        "\n",
+        "\n",
+        "def print_chart(chart):\n",
+        "    for seat in chart:\n",
+        "        # Print each seat with | between each one\n",
+        "        print(\" | \".join(seat))\n",
+        "\n",
+        "\n",
+        "def count(chart):\n",
+        "    # Count how many seats are still \"EMPTY\" and print that number\n",
+        "    # Accumulator to keep track of number of empty seats\n",
+        "    total = 0\n",
+        "    for row in chart:\n",
+        "        for seat in row:\n",
+        "            if seat == \"EMPTY\":\n",
+        "                total += 1\n",
+        "    print(f\"There are {total} empty seats remaining\")\n",
+        "\n",
+        "\n",
+        "def write_chart(chart, file=\"seating.txt\"):\n",
+        "    try:\n",
+        "        with open(file, \"w\") as f:\n",
+        "            for row in chart:\n",
+        "                f.write(\" | \".join(row) + \"\\n\")  # Write to file with one row per line\n",
+        "    except FileNotFoundError as e:  # Catch error with file not found\n",
+        "        print(f\"File not found: {e}\")\n",
+        "\n",
+        "\n",
+        "def main():\n",
+        "    # Assign at least 6 names to different seats\n",
+        "    assign_seat(chart, 1, 1, \"Sarah\")\n",
+        "    assign_seat(chart, 2, 2, \"Rachel\")\n",
+        "    assign_seat(chart, 2, 1, \"Rivka\")\n",
+        "    assign_seat(chart, 2, 3, \"Leah\")\n",
+        "    assign_seat(chart, 2, 4, \"Chaya\")\n",
+        "    assign_seat(chart, 1, 2, \"Tova\")\n",
+        "    print()\n",
+        "    print_chart(chart)\n",
+        "    print()\n",
+        "    count(chart)\n",
+        "    write_chart(chart)\n",
+        "\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "      main()\n",
+        "\n"
       ],
       "id": "rU1mtwttlkBQ"
     }
